img position adjusted

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                     type="text"
                     name="searchBar"
                     id="searchBar"
-                    placeholder="Search for a character"
+                    placeholder="Search for a character or house"
                     class="shadow"
                 />
             </div>
